--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "browk-ui",
   "version": "1.0.0",
   "description": "component library based on browk's figma design",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rollup --config",
+    "build": "rollup --c",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -35,6 +36,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.39",
+    "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "babel-jest": "^27.4.6",
@@ -42,6 +45,7 @@
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -56,6 +60,7 @@
     "rollup": "^2.67.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.5"
   },
   "engines": {
